# coder_agent

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  todo.md
.claude/: settings.local.json
.github/: commit-instructions.md
.github/workflows/: ci.yml
src/: agent.rs  agents.rs  app.rs  client.rs  commands.rs  diff.rs  executor.rs  input.rs  lib.rs  main.rs  markdown.rs  state.rs  ui.rs
src/tools/: current_dir.rs  grep_code.rs  invoke_subagent.rs  list_dir.rs  mod.rs  read_file.rs  replace_lines.rs  run_command.rs  search_file.rs  str_replace.rs  write_file.rs
tests/: agent_integration.rs  live_integration.rs
tests/common/: mod.rs
