[package]
name = "coder_agent"
version = "0.1.0"
description = "coder agent project"
authors = ["Oliver Stæhr <oliverstaehr96@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
log = "0.4"
simplelog = "0.12"
crossterm = "0.29.0"
futures = "0.3"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
pulldown-cmark = { version = "0.12", default-features = false }
textwrap = "0.16"
unicode-width = "0.2"

[dev-dependencies]
dotenvy = "0.15"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
